<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_a"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fouls"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
                    android:textColor="#000"
                    android:textSize="48sp" />

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/outs"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_outs"
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
                    android:textColor="#000"
                    android:textSize="48sp" />

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/innings"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_innings"
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
                    android:textColor="#000"
                    android:textSize="48sp" />

                <Button
                    style="@style/ButtonMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="24dp"
                    android:onClick="addFoulTeamA"
                    android:text="@string/add_foul" />

                <Button
                    style="@style/ButtonMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:onClick="addOutTeamA"
                    android:text="@string/add_out" />

                <Button
                    style="@style/ButtonMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:onClick="addInningTeamA"
                    android:text="@string/add_inning" />

            </LinearLayout>

            <View
                style="@style/myStyle"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#666666" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_b"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fouls"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
                    android:textColor="#000"
                    android:textSize="48sp" />

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/outs"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_outs"
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
                    android:textColor="#000"
                    android:textSize="48sp" />

                <TextView
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/innings"
                    android:textAllCaps="false"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_innings"
                    style="@style/myStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
                    android:textColor="#000"
                    android:textSize="48sp" />

                <Button
                    style="@style/ButtonMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:onClick="addFoulTeamB"
                    android:text="@string/add_foul" />

                <Button
                    style="@style/ButtonMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOutTeamB"
                    android:text="@string/add_out" />

                <Button
                    style="@style/ButtonMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addInningTeamB"
                    android:text="@string/add_inning" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="place holder" />

            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/myStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:onClick="resetAllValues"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>